--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,20 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+/* Extra spacing for all <p> on kefir-care page */
+.kefir-care-content p {
+  margin-bottom: 1.5em;
+}
+
+.kefir-care-content ul {
+	list-style: disc;
+	list-style-position: inside;
+	margin-bottom: 1.5em;
+}
+
+.kefir-care-content ol {
+	list-style: decimal;
+	list-style-position: inside;
+	margin-bottom: 1.5em;
+}
